--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,8 @@
 
         <thymeleaf.version>3.0.6.RELEASE</thymeleaf.version>
         <thymeleaf-layout-dialect.version>2.2.1</thymeleaf-layout-dialect.version>
+
+        <libsass-maven-plugin.version>0.2.7-libsass_3.4.3</libsass-maven-plugin.version>
     </properties>
 
     <dependencies>
@@ -72,7 +74,9 @@
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>servlet-api</artifactId>
+            <version>2.5</version>
         </dependency>
+
 
 
         <dependency>
@@ -89,10 +93,37 @@
     </dependencies>
 
     <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>com.github.warmuuh</groupId>
+                    <artifactId>libsass-maven-plugin</artifactId>
+                    <version>${libsass-maven-plugin.version}</version>
+                    <executions>
+                        <execution>
+                            <phase>generate-resources</phase>
+                            <goals>
+                                <goal>compile</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                    <configuration>
+                        <inputPath>${basedir}/src/main/sass/</inputPath>
+                        <outputPath>${basedir}/target/</outputPath>
+                        <includePath>${basedir}/src/main/sass/plugins/</includePath>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>com.github.warmuuh</groupId>
+                <artifactId>libsass-maven-plugin</artifactId>
             </plugin>
         </plugins>
     </build>
